<resources>
    <string name="app_name">Wheel of Fortune</string>
    <string name="words">Words list</string>
    <string name="play">Play game</string>
    <string name="addNew">Add new word</string>
    <string name="clear">Clear words\' base</string>
    <string name="wordHint">Enter a word</string>
    <string name="defHint">Enter a definition</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="nickname">Nickname</string>
    <string name="add">Add</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="alert_check">Are you sure?</string>
    <string name="words_delete_alert">Your list of words will be deleted.</string>
    <string name="noWordsException">There are no words in your list!</string>
    <string name="wrongLetter">Wrong letter!</string>
    <string name="noLetter">Enter a letter!</string>
    <string name="turn">It is a turn of</string>
    <string name="required">required</string>
    <string name="winner">Winner is</string>
</resources>