<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:hint="@string/nickname"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/nickname"
        app:layout_constraintTop_toBottomOf="@id/nickname" />
</androidx.constraintlayout.widget.ConstraintLayout>